# agent-orchestrator-prototype

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LOGGING_IMPLEMENTATION.md  MASTER_ROADMAP_FINAL.md  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  project_spec.yaml  pyproject.toml  release-please-config.json  roadmap.md
backend/: env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_core.py  0002_reference.py  0003_chat.py  0004_agent_runtime.py  0005_plan_backoff.py  0006_pause_and_telemetry.py  0007_execution_ledger.py  0008_typed_observations.py  0009_cyclic_project_plan.py  0010_operational_recovery.py  0011_goal_leases.py
backend/docs/: DESIGN_NOTES.md  INTEGRATION_GUIDE.md  README.md
backend/scripts/: block_report.py  dev.sh  export_openapi.py  export_plan_runs.py  reseed_openrouter_key.sh  snapshot_current_plan.py  start_api_and_worker.sh
backend/src/api/: README.md  dependencies.py  exceptions.py  outbox_relay.py  security.py  server.py  sse.py
backend/src/api/logging/: config.py
backend/src/api/middleware/: request_logging.py
backend/src/api/routers/: __init__.py  agent_definitions.py  config.py  events.py  metrics.py  plans.py  reasoner.py  reference.py  refinement.py  runner.py  secrets.py
backend/src/api/schemas/: __init__.py  capabilities.py  common.py  control.py  discovery.py  plan.py  project.py  tasks.py
backend/src/app/: README.md  execution_records.py  observations.py  ports.py  runtime_failures.py  sandbox_port.py  verification.py
backend/src/app/handlers/: base.py  execution_handler.py  gate_handler.py  planning_handler.py
backend/src/app/planning/: roadmap_assembler.py
backend/src/app/reconciliation/: control_loop.py  phase_dispatch_reconciler.py  reconciliation_engine.py  task_reconciler.py
backend/src/app/services/: registry_service.py
backend/src/app/telemetry/: project_state_wrapper.py  service.py
backend/src/app/testing/: execution_records.py  fakes.py  observations.py
backend/src/app/use_cases/: advance_plan.py  apply_edit.py  bind_project.py  claim_ready_goal.py  control.py  conversation.py  create_plan.py  cyclic_planning.py  pause_resume.py  reconcile_runtime.py  request_replan.py  run_worker.py  update_retry_policy.py
backend/src/app/usecases/: advance_goal_from_pr.py  create_goal_pr.py  goal_merge_task.py  retry_goal_tasks.py  run_refinement.py  sync_goal_pr_status.py  task_execute.py  task_unblock.py
backend/src/domain/: README.md
backend/src/domain/aggregates/: README.md  planner_orchestrator.py  task.py
backend/src/domain/entities/: README.md  agent_spec.py  execution_contracts.py  goal.py  model_provider.py  planning_artifacts.py  project.py  task.py
backend/src/domain/errors/: __init__.py  agent_errors.py  base.py  config_errors.py  plan_errors.py  planning_errors.py  tasks_errors.py
backend/src/domain/events/: README.md  agent_events.py  domain_event.py  outbox.py
backend/src/domain/factories/: README.md  agent_factory.py  capability_factory.py  plan_factory.py  provider_factory.py
backend/src/domain/policies/: README.md  retry_policies.py
backend/src/domain/ports/: __init__.py  active_project.py  agent_port.py  git.py  planner_worker_port.py  reasoner_port.py  telemetry_port.py  workplace_port.py
backend/src/domain/project_spec/: __init__.py  aggregate.py  errors.py
backend/src/domain/repositories/: README.md  agent_repo.py  capability_repo.py  goal_lease_repo.py  model_provider_repo.py  model_repo.py  planner_repo.py  planner_session_repository.py  project_plan_repository.py  project_repo.py
backend/src/domain/rules/: __init__.py
backend/src/domain/services/: __init__.py  agent_role_resolution.py  capability_matching.py  dependency_graph.py  edit_service.py  lookups.py  navigation.py  reconciler.py
backend/src/domain/value_objects/: README.md  capability.py  lifecycle.py  tasks_vos.py
backend/src/infra/: README.md  clock.py  container.py  errors.py  project_paths.py
backend/src/infra/cli/: error_handler.py  main.py
backend/src/infra/db/: _session.py  active_project.py  agent_event_reader.py  agent_event_sink.py  bootstrap.py  chat_repository.py  config_store.py  engine.py  execution_record_repository.py  exporter.py  goal_lease_repository.py  observation_repository.py  outbox.py  plan_repository.py  reference_repos.py  secret_ref.py  secret_resolver.py  secret_store.py  tables.py  task_store.py  unit_of_work.py
backend/src/infra/forge/: fallback.py  github.py  local_git.py
backend/src/infra/fs/: capability_registry.py  task_repository.py
backend/src/infra/git/: project_workspace.py  workspace.py
backend/src/infra/logging/: __init__.py  planner_logger.py
backend/src/infra/policies/: retry_policy_factory.py
backend/src/infra/reasoner/: factory.py  openai_reasoner.py  stub_reasoner.py
backend/src/infra/redis_adapters/: event_adapter.py  lease_memory.py  lease_refresher.py
backend/src/infra/runtime/: cli_runner.py  dependency_checker.py  dummy_runner.py  factory.py  pi_protocol.py  sandbox.py  (+3 more)
backend/tests/: README.md  conftest.py  fakes_llm.py  support.py
backend/tests/integration/: test_agent_runner_factory.py  test_api.py  test_api_lifespan.py  test_api_plan_state_machine.py  test_api_prs.py  test_block_report.py  test_chat_repository.py  test_config_store_sqlite.py  test_default_cyclic_execution.py  test_drive_plan_sqlite_git.py  test_e2e_dry_run.py  test_forge_adapters.py  test_forge_fallback.py  test_full_cycle.py  test_full_cycle_llm.py  test_git_workspace.py  test_migrations.py  test_observation_repository.py  test_outbox_relay.py  test_plan_run_export.py  test_reasoner_factory.py  test_reasoner_smoke.py  test_reference_repos.py  test_retry_policy_factory.py  test_runner_taxonomy.py  test_secret_resolver.py  test_secret_store.py  test_sse_stream.py  test_task_manager.py  test_tdd_execution.py  test_worker_pool.py
backend/tests/regression/: test_bugfix_regressions.py
backend/tests/unit/: conftest.py  test_architecture_boundaries.py  test_retry_policy.py
(+839 files in other folders)
