[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Agent Orchestrated Dev System — Agent-CLI Mode (Hexagonal + Event-Driven)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "rq>=1.16",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "click>=8.1",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "python-ulid>=2.0",
    "tenacity>=8.0",
    "coverage==7.13.4",
    "fakeredis==2.34.1",
    "iniconfig==2.3.0",
    "librt==0.8.1",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.5",
    "sortedcontainers==2.3.0",
    "openai>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.20",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
