[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Agent Orchestrated Dev System — Agent-CLI Mode (Hexagonal + Event-Driven)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "click>=8.1",
    "structlog>=24.0",
    "openai>=2.30.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "coverage>=7.0",
    # >=2.36: earlier releases lose messages on multi-stream XREADGROUP
    # (cursor advances on every stream while delivering only one)
    "fakeredis>=2.36",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
orchestrate = "src.infra.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

# Honest per-layer typing: src/domain and src/app are fully strict (the
# layers that claim it); the adapter layers carry explicit relaxations
# until they are brought up to strict. Ratchet rule: `mypy src` must stay
# at zero errors under this config — tighten flags here, never loosen.
# TODO(type-health): remove these overrides module by module.
[[tool.mypy.overrides]]
module = ["src.infra.*", "src.api.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_return_any = false

# Routers receive DI deps typed as `object` (src/api/dependencies.py) —
# typing those Annotated deps removes this block.
[[tool.mypy.overrides]]
module = ["src.api.routers.*"]
disable_error_code = ["attr-defined", "arg-type"]

# redis-py's sync client returns `Awaitable[T] | T` unions everywhere.
[[tool.mypy.overrides]]
module = ["src.infra.redis_adapters.*"]
disable_error_code = ["union-attr", "arg-type", "index"]

# Runtime adapters narrow SessionHandle to concrete handle types (LSP
# variance) and call SDKs whose param types are stricter than our dicts.
[[tool.mypy.overrides]]
module = ["src.infra.runtime.*"]
disable_error_code = ["override", "arg-type"]
