[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Agent Orchestrated Dev System — Agent-CLI Mode (Hexagonal + Event-Driven)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "click>=8.1",
    "structlog>=24.0",
    "openai>=2.30.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "coverage>=7.0",
    # >=2.36: earlier releases lose messages on multi-stream XREADGROUP
    # (cursor advances on every stream while delivering only one)
    "fakeredis>=2.36",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
orchestrate = "src.infra.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "integration: exercises real adapters (SQLite, git, subprocess); deselect with -m 'not integration'",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
# TRANSPLANT parking lot: files preserved from the old backend that still
# reference deleted pre-refactor modules. Each is un-parked (adapted to the new
# ports) in its named integration stage; this list must only SHRINK.
exclude = [
    "^src/api/server\\.py$",          # TRANSPLANT(stage-7)
    "^src/api/exceptions\\.py$",      # TRANSPLANT(stage-7)
    "^src/api/security\\.py$",        # TRANSPLANT(stage-7)
    "^src/api/middleware/",           # TRANSPLANT(stage-7)
    "^src/api/logging/",              # TRANSPLANT(stage-7)
    "^src/infra/db/tables\\.py$",     # TRANSPLANT(stage-3)
    "^src/infra/db/secret_store\\.py$",    # TRANSPLANT(stage-4)
    "^src/infra/db/secret_resolver\\.py$", # TRANSPLANT(stage-4)
    "^src/infra/git/",                # TRANSPLANT(stage-5)
    "^src/infra/runtime/",            # TRANSPLANT(stage-5)
    "^src/infra/settings/",           # TRANSPLANT(stage-7)
    "^src/infra/logging/",            # TRANSPLANT(stage-7)
    "^src/infra/redis_adapters/",     # TRANSPLANT(phase-3 seam, unused)
    "^src/infra/cli/",                # TRANSPLANT(stage-8)
    "^src/infra/project_paths\\.py$", # TRANSPLANT(stage-7)
    "^src/infra/dependency_checker\\.py$", # TRANSPLANT(stage-8)
]

# Honest per-layer typing: src/domain and src/app are fully strict (the
# layers that claim it); the adapter layers carry explicit relaxations
# until they are brought up to strict. Ratchet rule: `mypy src` must stay
# at zero errors under this config — tighten flags here, never loosen.
# TODO(type-health): remove these overrides module by module.
[[tool.mypy.overrides]]
module = ["src.infra.*", "src.api.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_return_any = false
